--- a/pages/login-form.html
+++ b/pages/login-form.html
@@ -15,7 +15,7 @@
             <img src="../assets/image 2.png" class="UNILAK--logo" alt="">
         </nav>
         <div class="login__form--content">
-        <form action="" class="login__form" id="myForm" onsubmit="return validateForm() " >
+        <form action="" class="login__form" id="myForm" >
             <span class="form__title">Manage Your Stack and Queue</span>
             <div class="login__username">
                 <input id="username" class="username--input" type="text" placeholder="username">
